--- a/assets/src/app/committee/index.tpl.html
+++ b/assets/src/app/committee/index.tpl.html
@@ -23,6 +23,7 @@
 <md-divider></md-divider>
 <div class="container" ng-show="editCommitteeToggle"><p>edit committee form</p></div>
 <div class="committee-container container">
+	<div class="spacing-10"></div>
 	<div ui-view="committeeActivity"></div>
 	<div ui-view="committeeBills"></div>
 	<div ui-view="committeeCommittees"></div>
