--- a/assets/src/app/post/index.tpl.html
+++ b/assets/src/app/post/index.tpl.html
@@ -1,6 +1,6 @@
 <div class="container">
     <md-card>
-        <div style="padding:16px 16px 16px">
+        <div class="post-container">
 
 
                 <div>
