--- a/assets/styles/css/about.css
+++ b/assets/styles/css/about.css
@@ -1,5 +1,5 @@
 .imageContainer {
-  background:rgba(22,22,22,0.75);
+  background:rgb(36,36,46);
   overflow:hidden;
   min-height: 500px;
   font-family: 'Jura', sans-serif;
