--- a/assets/src/app/member/index.tpl.html
+++ b/assets/src/app/member/index.tpl.html
@@ -10,11 +10,11 @@
 			<div class="pull-right member-tab-container">
 				<ul class="member-tabs">
 					<li><a href="member/{{member.username}}">Activity</a></li>
-					<!--<li><a href="member/{{member.username}}/bills">{{committeeCount}} Bills</a></li>-->
-					<li><a href="member/{{member.username}}/committees">{{committeeCount}} Committees</a></li>
-					<li><a href="member/{{member.username}}/constituents">{{constituentCount}} Constituents</a></li>
-					<li><a href="member/{{member.username}}/representatives">{{representativeCount}} Representatives</a></li>
-					<li><a href="member/{{member.username}}/votes">{{voteCount}} Votes</a></li>
+					<!--<li><a href="member/{{member.username}}/bills">{{committeeCount}} Bill<span ng-show="committee.memberCount>1">s</span></a></li>-->
+					<li><a href="member/{{member.username}}/committees">{{committeeCount}} Committee<span ng-show="committeeCount>1">s</span></a></li>
+					<li><a href="member/{{member.username}}/constituents">{{constituentCount}} Constituent<span ng-show="constituentCount>1">s</span></a></li>
+					<li><a href="member/{{member.username}}/representatives">{{representativeCount}} Representative<span ng-show="representativeCount>1">s</span></a></li>
+					<li><a href="member/{{member.username}}/votes">{{voteCount}} Vote<span ng-show="voteCount>1">s</span></a></li>
 					<li ng-show="currentUser.id != member.id">
 						<a ng-show="!isFollowing" class="btn btn-default" ng-click="selectAsRepresentative()">Elect</a>
 						<a ng-show="isFollowing" class="btn btn-default" ng-click="removeRepresentative()">Unelect</a>
