--- a/assets/styles/css/about.css
+++ b/assets/styles/css/about.css
@@ -19,7 +19,7 @@
   margin-bottom:auto;
 }
 .imageContainerSmall {
-  background:rgba(22,22,22,0.75);
+  background:rgb(36,36,46);
   overflow:hidden;
   min-height: 200px;
   font-family: 'Jura', sans-serif;
