--- a/assets/src/app/home/templates/intro.tpl.html
+++ b/assets/src/app/home/templates/intro.tpl.html
@@ -16,7 +16,7 @@
             <div class="col-md-6">
                 <h1>be part of the movement</h1>
                 <h4>direct your impact though input on policy</h4>
-                <h4>create a coalition of representation</h4>
+                <h4>create coalitions of representation</h4>
                 <br><br>
                 <a href="/about" class="btn btn-default">learn more</a>
                 <!--reduce polarization-->
