--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -7,10 +7,12 @@
 <div class="about-container">
 	<div id="section1">
 		<div class="container">
-			<!--<h2>the voice of the internet</h2>-->
+
 			<h2>directly impact the political landscape</h2>
 			<br>
 			<h4>build empowerment though the creation of constituent coalitions.</h4>
+			<!--ability to create citizen colitions-->
+
 			<h4>change consensus though direct input on policy decisions.</h4>
 		</div>
 	</div>
