--- a/assets/styles/css/theme.css
+++ b/assets/styles/css/theme.css
@@ -263,14 +263,11 @@ md-input-container.md-default-theme .md-input, md-input-container .md-input {
     padding:50px;
     background-color:#24242e;
     color: white;
-    //font-family: 'Jura', sans-serif;
-    font-family: sans-serif;
-
+    font-family: "Jura", sans-serif;
     position: absolute;
     right: 0px;
     bottom: 0px;
     left: 0px;
-
 }
 
 .footer a{
@@ -401,8 +398,7 @@ md-input-container.md-default-theme .md-input, md-input-container .md-input {
   max-width: 100%;
 }
 .nav {
-  //font-family: "Jura";
-  font-family: sans-serif;
+  font-family: "Jura", sans-serif;
   font-size:20px;
 }
 .nav input {
