--- a/.tmp/public/src/app/member/index.tpl.html
+++ b/.tmp/public/src/app/member/index.tpl.html
@@ -1,20 +1,28 @@
 <div ui-view="member">
 	<div class="profile-header">
 		<div class="member-cover">
-			<img ng-src="{{member.coverUrl}}" err-src="/images/avatar.png" />
+			<img ng-src="{{member.coverUrl}}" err-src="/images/avatar.png"/>
+			<div class=""></div>
 		</div>
 		<div class="container">
 			<div class="pull-left">
-				<img class="avatar" ng-src="{{member.avatarUrl}}"/>
+				<div style="">
+					<img class="avatar" ng-src="{{member.avatarUrl}}"/>
+					<div class=""></div>
+				</div>
+
+				<!--<a class="btn btn-default" style="position:absolute;le" href="account" ng-show="true">Save</a>
+			  	<span id="overlay_text" style="position: relative; top: -10px; z-index: 3;">OVERLAY</span>-->
+
 			</div>
 			<div class="pull-right member-tab-container">
 				<ul class="member-tabs">
 					<li><a href="member/{{member.username}}">Activity</a></li>
-					<!--<li><a href="member/{{member.username}}/bills">{{committeeCount}} Bill<span ng-show="committee.memberCount>1">s</span></a></li>-->
-					<li><a href="member/{{member.username}}/committees">{{committeeCount}} Committee<span ng-show="committeeCount>1">s</span></a></li>
-					<li><a href="member/{{member.username}}/constituents">{{constituentCount}} Constituent<span ng-show="constituentCount>1">s</span></a></li>
-					<li><a href="member/{{member.username}}/representatives">{{representativeCount}} Representative<span ng-show="representativeCount>1">s</span></a></li>
-					<li><a href="member/{{member.username}}/votes">{{voteCount}} Vote<span ng-show="voteCount>1">s</span></a></li>
+					<li ng-show="billCount"><a href="member/{{member.username}}/bills">{{billCount}} Bill<span ng-show="committee.memberCount!=1">s</span></a></li>
+					<li><a href="member/{{member.username}}/committees">{{committeeCount}} Committee<span ng-show="committeeCount!=1">s</span></a></li>
+					<li><a href="member/{{member.username}}/constituents">{{constituentCount}} Constituent<span ng-show="constituentCount!=1">s</span></a></li>
+					<li><a href="member/{{member.username}}/representatives">{{representativeCount}} Representative<span ng-show="representativeCount!=1">s</span></a></li>
+					<li><a href="member/{{member.username}}/votes">{{voteCount}} Vote<span ng-show="voteCount>=!1">s</span></a></li>
 					<li ng-show="currentUser.id != member.id">
 						<a ng-show="!isFollowing" class="btn btn-default" ng-click="selectAsRepresentative()">Elect</a>
 						<a ng-show="isFollowing" class="btn btn-default" ng-click="removeRepresentative()">Unelect</a>
@@ -24,7 +32,8 @@
 					</li>-->
 					<li ng-show="currentUser.id == member.id">
 						<!--<a class="btn btn-default" href=""member/{{member.username}}/edit">Edit Profile</a>-->
-						<a class="btn btn-default" href="account">Edit Profile</a>
+						<a class="btn btn-default" href="member/{{member.username}}/edit">Edit Profile</a>
+						<a class="btn btn-default" href="account" ng-show="false">Save</a>
 					</li>
 				</ul>
 			</div>
@@ -59,8 +68,10 @@
 		<div ui-view="memberBills"></div>
 		<div ui-view="memberCommittees"></div>
 		<div ui-view="memberConstituents"></div>
+		<div ui-view="memberEdit"></div>
 		<div ui-view="memberRepresentatives"></div>
 		<div ui-view="memberVotes"></div>
 	</div>
+	<div class="spacing-25"></div>	
 </div>
 <div ng-include="'footer/index.tpl.html'"></div>
