--- a/assets/src/app/bill/index.tpl.html
+++ b/assets/src/app/bill/index.tpl.html
@@ -6,12 +6,11 @@
 		<div ng-repeat="committee in bill.committees">
 			<p><a href="committee/{{committee.urlTitle}}">{{committee.title}}</a></p>
 		</div>
-		<div class="spacing-10"></div>
-		<div class="row">
+		<!--<div class="row">
 			<button class="col-xs-6 btn btn-default upVote" ng-click="createVote(1)"><i class="fa fa-caret-up"></i> {{vote.plusCount}}</button>
         	<button class="col-xs-6 btn btn-default downVote" ng-click="createVote(-1)"><i class="fa fa-caret-down"></i> {{vote.minusCount}}</button>
     	</div>
-    	<div class="spacing-10"></div>
+    	<div class="spacing-10"></div>-->
 		<uib-tabset>
 			<uib-tab heading="Info" active="active">
 			    <div class="spacing-10"></div>
@@ -45,8 +44,9 @@
 				</div>
 		    </uib-tab>
 		    <uib-tab heading="Activity">
+
 		    	{{actions}}
-		    	<div class="profilePost">
+				<div ng-show="!currentUser" class="profilePost">
 					<form role="form">
 						<md-input-container class="md-block">
 							<textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post"></textarea>
@@ -54,6 +54,36 @@
 						<button ng-click="createPost()" type="submit" class="btn btn-default">Submit</button>
 					</form>
 		        </div>
+
+				<!--<div ng-show="!currentUser" class="profilePost">
+			        <form role="form">
+			            <md-input-container class="md-block">
+			                <textarea ng-model="newPost.post" md-maxlength="150" rows="5" md-select-on-focus aria-label="new post"></textarea>
+			            </md-input-container>
+			            <button ng-click="createPost()" type="submit" class="btn btn-default">Submit</button>
+			        </form>
+			    </div>-->
+
+			    <md-card ng-show="currentUser">
+			        <div class="card-container">
+			            <div class="post-controller-container">
+			                <a href="/member/{{user.username}}">
+			                    <img class="post-img" ng-src="{{user.avatarUrl}}" class="md-card-image" alt="{{user.username}}">
+			                    <h4 class="post-name">{{user.username}}</h4>
+			                </a>
+			            </div>
+			            <div style="margin-left:61px;">
+			                <form role="form">
+			                    <md-input-container class="md-block">
+			                        <textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder="what's happening"></textarea>
+			                    </md-input-container>
+			                    <button ng-click="createPost()" type="submit" class="btn btn-default pull-right"><i class="fa fa-paper-plane"></i> Submit</button>
+			                </form>
+			            </div>
+			        </div>
+			    </md-card>
+
+
 		        <md-card ng-repeat="post in posts">
 		        	<div class="card-container">
 
@@ -85,9 +115,11 @@
 
 					</div>
 		        </md-card>
+
+
 		    </uib-tab>
 			<uib-tab heading="Discussion">
-				<div class="profilePost">
+				<div ng-show="!currentUser" class="profilePost">
 					<form role="form">
 						<md-input-container class="md-block">
 							<textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post"></textarea>
@@ -95,6 +127,40 @@
 						<button ng-click="createPost()" type="submit" class="btn btn-default">Submit</button>
 					</form>
 		        </div>
+
+
+
+				<!--<div ng-show="!currentUser" class="profilePost">
+			        <form role="form">
+			            <md-input-container class="md-block">
+			                <textarea ng-model="newPost.post" md-maxlength="150" rows="5" md-select-on-focus aria-label="new post"></textarea>
+			            </md-input-container>
+			            <button ng-click="createPost()" type="submit" class="btn btn-default">Submit</button>
+			        </form>
+			    </div>-->
+
+			    <md-card ng-show="currentUser">
+			        <div class="card-container">
+			            <div class="post-controller-container">
+			                <a href="/member/{{user.username}}">
+			                    <img class="post-img" ng-src="{{user.avatarUrl}}" class="md-card-image" alt="{{user.username}}">
+			                    <h4 class="post-name">{{user.username}}</h4>
+			                </a>
+			            </div>
+			            <div style="margin-left:61px;">
+			                <form role="form">
+			                    <md-input-container class="md-block">
+			                        <textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder="what's happening"></textarea>
+			                    </md-input-container>
+			                    <button ng-click="createPost()" type="submit" class="btn btn-default pull-right"><i class="fa fa-paper-plane"></i> Submit</button>
+			                </form>
+			            </div>
+			        </div>
+			    </md-card>
+
+
+
+
 		        <md-card ng-repeat="post in posts">
 
 			        <div class="card-container">
@@ -127,14 +193,17 @@
 
 		        </md-card>
 		    </uib-tab>
-		    <uib-tab heading="Votes">
-	    		<div ng-show="currentUser">
+		    <uib-tab heading="Votes" ng-show="votes.length > 0">
+	    		<!--<div ng-show="currentUser">
 					<form role="form">
 						<md-input-container class="md-block">
 							<textarea ng-model="newVote.title" rows="5" md-select-on-focus aria-label="newVote"></textarea>
 						</md-input-container>
 						<button type="submit" ng-click="" class="btn btn-default">Submit</button>
 					</form>
+				</div>-->
+				<div class="voteContainer" ng-show="votes.length==0">
+					<h2>no votes yet</h2>
 				</div>
 			    <div class="voteContainer" ng-show="votes.length!=0">
 					<md-card ng-repeat="vote in bill.votes">
@@ -151,7 +220,7 @@
 					</md-card>
 				</div>
 		    </uib-tab>
-			<uib-tab heading="Related">
+			<uib-tab heading="Related" ng-show="bill.relatedBills > 0">
 				<div ng-repeat="bill in bill.relatedBills">
 					<p><a href="bill/{{bill.urlTitle}}">{{bill.title}}</a></p>
 				</div>
