--- a/assets/src/app/member/templates/activity.tpl.html
+++ b/assets/src/app/member/templates/activity.tpl.html
@@ -1,18 +1,41 @@
 <div class="container">
-	<div class="profilePost">
+
+
+    <!--<p>send as a fax? - send as mail (verified), send email (always) - send video??</p>-->
+	<div ng-show="!currentUser" class="profilePost">
 		<form role="form">
 			<md-input-container class="md-block">
-	        	<textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post"></textarea>
-				<!--connect legislators-->
-				<!--<p>send as a fax? - send as mail (verified), send email (always) - send video??</p>-->
+	        	<textarea ng-model="newPost.post" placeholder="what's up?" rows="5" md-select-on-focus aria-label="new post"></textarea>
 			</md-input-container>
 			<button ng-click="createPost()" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
 		</form>
 	</div>
+
+    <md-card ng-show="currentUser">
+        <div class="card-container">
+            <div class="post-controller-container">
+                <a href="/member/{{user.username}}">
+                    <img class="post-img" ng-src="{{user.avatarUrl}}" class="md-card-image" alt="{{user.username}}">
+                    <h4 class="post-name">{{user.username}}</h4>
+                </a>
+            </div>
+            <div style="margin-left:61px;">
+                <form role="form">
+                    <md-input-container class="md-block">
+                        <textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder="what's happening"></textarea>
+                    </md-input-container>
+                    <button ng-click="createPost()" type="submit" class="btn btn-default pull-right"><i class="fa fa-paper-plane"></i> Submit</button>
+                </form>
+            </div>
+        </div>
+    </md-card>
+
+
+
 	<div class="spacing-25"></div>
 	<!--gotta make this unified with universally styled cards-->
     <md-card ng-repeat="post in posts">
-        <div style="padding:16px 16px 16px">
+        <div class="card-container">
 
 
                 <div>
@@ -27,14 +50,20 @@
                 </div>
 
                 <div class="post-container">
+                    <div ng-show="post.profile.id != post.user.id && post.profile.id != member.id">
+                        <a ng-show="post.bill" href="bill/{{post.bill.id}}/1"><h4>{{post.bill.title}}</h4></a>
+                        <a ng-show="post.committee" href="committee/{{post.committee.urlTitle}}"><h4>{{post.committee.title}}</h4></a>
+                        <a ng-show="post.profile.id != member.id" href="member/{{post.profile.username}}"><h4>{{post.profile.username}}</h4></a>
+                        <a ng-show="post.vote" href="vote/{{post.vote.id}}"><h4>{{post.vote.title}}</h4></a>
+                    </div>
                     <p>{{post.post}}</p>
                 </div>
 
                 <div class="post-action-container">
                     <div class="pull-left">
-                        <a href="#" ng-click=""><i class="fa fa-angle-up grey"></i></a> 
-                        <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
-                        <a href="#">reply</a>
+                        <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
+                        <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
+                        <a href="#" class="grey" ng-click="reply(post)"><i class="fa fa-reply"></i> reply </a>
                     </div>
                     <div class="pull-right">
                         <a href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
@@ -53,7 +82,7 @@
         </div>
     </md-card>
 	<md-card ng-repeat="vote in votes">
-        <div style="padding:16px 16px 16px">
+        <div class="card-container">
 
 
 			<div>
@@ -68,18 +97,22 @@
 	        </div>
 
             <div class="post-container">
-				<p>{{vote.voteString}}<!-- on behalf of {{constituents.length}} constitutent<span ng-show="constituents.length > 1">s</span>--></p>
-				<a href="/vote/{{vote.vote.id}}">{{vote.vote.title}}</a> for 
-				<br>
-				<a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a>
-				<br><br>
-			</div>
+                <h4>{{vote.voteString}}<span ng-show="member.constituentCount>0"> for <a href="member/{{member.username}}/constituents">{{member.constituentCount}} constituent<span ng-show="member.constituentCount!=1">s</span></a></span></h4>
+                <div class="clearfix"></div>
+                <a href="/vote/{{vote.vote.id}}"><h4>{{vote.vote.title}}</h4></a>
+                <div class="spacing-10"></div>
+                <a href="/bill/{{result.bill.id}}/{{result.bill.title}}">{{vote.bill.title}}</a>
+                <div class="spacing-10"></div>
+                <button ng-class="{'upVoted': vote.voteString=='Yes' || vote.voteString=='Yea'}" class="btn btn-default upVote col-sm-6" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i>  {{vote.vote.plusCount}}</button>
+                <button ng-class="{'downVoted': vote.voteString=='No' || vote.voteString=='Nay'}" class="btn btn-default downVote col-sm-6" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{vote.vote.minusCount}}</button>
+            </div>
 
- 			<div class="post-action-container">
+            <div class="spacing-15"></div>
+            <div class="post-action-container">
                 <div class="pull-left">
-                    <a href="#" ng-click=""><i class="fa fa-angle-up grey"></i></a> 
-                    <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
-                    <a href="#" class="grey" ng-click="reply(post)"><i class="fa fa-reply"></i> reply </a>
+                    <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
+                    <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
+                    <a href="#" class="grey" ng-click="reply(result)"><i class="fa fa-reply"></i> reply </a>
                 </div>
                 <div class="pull-right">
                     <a href="votevote/{{vote.id}}"><i class="fa fa-link grey"></i></a>
