--- a/assets/src/app/post/index.tpl.html
+++ b/assets/src/app/post/index.tpl.html
@@ -1,37 +1,60 @@
 <div class="container">
-    <md-card>
-        <div class="post-container">
+    <md-card style="margin-top:10%;margin-bottom:10%">
+        <div class="card-container">
 
-
-                <div>
-                    <a href="/member/{{post.user.username}}">
-                        <img style="width:48px;height:48px;display:inline" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
-                        <h4 style="display:inline">{{post.user.username}}</h4>
-                    </a>
-                    <span am-time-ago="post.updatedAt"></span>
-                </div>
-
-                <div style="margin-left:58px;overflow:hidden;">
-                    <p style="font-size:20px;word-wrap: break-word;">{{post.post}}</p>
-                </div>
-
-                <div>
-                    <div class="pull-left">
-                        <a href="#" ng-click=""><i class="fa fa-thumbs-up"></i></a> 
-                        <a href="#" ng-click=""><i class="fa fa-thumbs-down"></i></a> 
-                        <a href="#">reply</a>
+            <div class="post-controller-container">
+                <a href="/member/{{post.user.username}}">
+                    <img class="post-img" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
+                    <h4 class="post-name">{{post.user.username}}</h4>
+                </a>
+                <div class="pull-right">
+                    <span class="grey" am-time-ago="post.updatedAt"></span>
+                    <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a>
+                    <!--
+                    <div class="btn-group" uib-dropdown is-open="status.isopen">
+                      <button uib-dropdown-toggle ng-disabled="disabled">
+                        <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+                      </button>
+                      <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                        <li role="menuitem"><a href="#">Share</a></li>
+                        <li role="menuitem"><a href="#">Delete</a></li>
+                      </ul>
                     </div>
+                    -->
                 </div>
+            </div>
 
-                <div class="profilePost">
-                    <form role="form">
-                        <md-input-container class="md-block">
-                            <textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
-                        </md-input-container>
-                    </form>
-                    <button ng-click="createPost()" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
-
+            <div class="post-container">
+                <div ng-show="post.profile.id != post.user.id">
+                    <div class="spacing-5"></div>
+                    <a ng-show="post.bill" href="bill/{{post.bill.id}}/1"><h4>{{post.bill.title}}</h4></a>
+                    <a ng-show="post.committee" href="committee/{{post.committee.urlTitle}}"><h4>{{post.committee.title}}</h4></a>
+                    <a ng-show="post.profile" href="member/{{post.profile.username}}"><h4>{{post.profile.username}}</h4></a>
+                    <a ng-show="post.vote" href="vote/{{post.vote.id}}"><h4>{{post.vote.title}}</h4></a>
+                    <div class="spacing-5"></div>
                 </div>
+                <p>{{post.post}}</p>
+            </div>
+
+            <div class="post-action-container">
+                <div class="pull-left">
+                    <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
+                    <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
+                    <a href="#" class="grey" ng-click="reply(post)"><i class="fa fa-reply"></i> reply </a>
+                </div>
+                <div class="pull-right">
+                    <a href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
+                </div>
+            </div>
+
+            <div style="margin-left:61px;" ng-show="post.showReply">
+                <form role="form">
+                    <md-input-container class="md-block">
+                        <textarea ng-model="post.newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
+                    </md-input-container>
+                    <button ng-click="createPost(post)" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
+                </form>
+            </div>
 
         </div>
     </md-card>
