--- a/assets/src/app/search/index.tpl.html
+++ b/assets/src/app/search/index.tpl.html
@@ -28,12 +28,12 @@
 							<div class="spacing-10"></div>
 							<a href="/bill/{{result.bill.id}}/{{result.bill.title}}">{{result.bill.title}}</a>
 							<div class="spacing-10"></div>
-							<button ng-class="{'upVoted': class=='upVote'}" class="btn btn-default upVote col-sm-6" ng-click="createVote(1, result)">
+							<!--<button ng-class="{'upVoted': class=='upVote'}" class="btn btn-default upVote col-sm-6" ng-click="createVote(1, result)">
 								<i class="fa fa-caret-up vBlue"></i> <b>{{result.plusCount}}</b>
 							</button>
 							<button ng-class="{'downVoted': class=='downVote'}" class="btn btn-default downVote col-sm-6" ng-click="createVote(-1, result)">
 								<i class="fa fa-caret-down red-color"></i>  <b>{{result.minusCount}}</b>
-							</button>
+							</button>-->
 						</div>
 
 				        <div ng-show="result.model=='post'" class="card-container">
@@ -161,9 +161,19 @@
 						<md-card ng-show="result.model=='bill'">
 							<div class="card-container">
 				            	<h4><a href="/bill/{{bill._id}}/{{bill.title.replace(' ','-')}}">{{result.title}}</a></h4>
-								<div class="spacing-10"></div>
+
+				            	<div class="post-action-container">
+			                        <div class="pull-left">
+			                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
+			                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
+			                            <a href="#" class="grey" ng-click="reply(result)"><i class="fa fa-reply"></i> reply </a>
+			                        </div>
+			                    </div>
+
+
+								<!--<div class="spacing-10"></div>
 				            	<button ng-class="{'upVoted': vote.class=='upVote'}" class="btn btn-default upVote col-sm-6" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i>  {{result.plusCount}}</button>
-					            <button ng-class="{'downVoted': vote.class=='downVote'}" class="btn btn-default downVote col-sm-6" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{result.minusCount}}</button>
+					            <button ng-class="{'downVoted': vote.class=='downVote'}" class="btn btn-default downVote col-sm-6" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{result.minusCount}}</button>-->
 					        </div>
 						</md-card>
 
@@ -201,9 +211,18 @@
 			    	<md-card ng-repeat="bill in bills">
 						<div class="card-container">
 			            	<h4><a href="/bill/{{bill.id}}/{{bill.title.replace(' ','-')}}">{{bill.title}}</a></h4>
-							<div class="spacing-10"></div>
+
+							<div class="post-action-container">
+		                        <div class="pull-left">
+		                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
+		                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
+		                            <a href="#" class="grey" ng-click="reply(result)"><i class="fa fa-reply"></i> reply </a>
+		                        </div>
+		                    </div>
+
+							<!--<div class="spacing-10"></div>
 			            	<button ng-class="{'upVoted': vote.class=='upVote'}" class="btn btn-default upVote col-sm-6" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i>  {{vote.plusCount}}</button>
-				            <button ng-class="{'downVoted': vote.class=='downVote'}" class="btn btn-default downVote col-sm-6" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{vote.minusCount}}</button>
+				            <button ng-class="{'downVoted': vote.class=='downVote'}" class="btn btn-default downVote col-sm-6" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{vote.minusCount}}</button>-->
 				        </div>
 			        </md-card>
     			</uib-tab>
