--- a/assets/styles/css/theme.css
+++ b/assets/styles/css/theme.css
@@ -424,9 +424,9 @@ md-input-container.md-default-theme .md-input, md-input-container .md-input {
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
 }
 
-.active span {
-  color: #2AB996;
-}
+//.active span {
+//  color: #2AB996;
+//}
 
 .activeicon i {
   color: #2AB996;
