--- a/.tmp/public/src/app/search/index.tpl.html
+++ b/.tmp/public/src/app/search/index.tpl.html
@@ -68,7 +68,7 @@
 		                            <a ng-show="result.vote" href="vote/{{result.vote.id}}"><h4>{{result.vote.title}}</h4></a>
 		                            <div class="spacing-5"></div>
 		                        </div>
-		                        <p>{{post.post}}</p>
+		                        <p>{{result.post}}</p>
 		                    </div>
 
 		                    <div class="post-action-container">
