--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -7,7 +7,6 @@
 <div class="about-container">
 	<div id="section1">
 		<div class="container">
-
 			<h2>directly impact the political landscape</h2>
 			<br>
 			<h4>build empowerment though the creation of constituent coalitions.</h4>
@@ -17,16 +16,30 @@
 		</div>
 	</div>
 	<div id="section2">
-		<div class="container" style="text-align:right">
-			<h4>direct your impact though input on policy</h4>
-			<h5>decision making influence in the power of your hands</h5>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6">
+					<img src="images/voetr-about2.png" style="max-width:100%">
+		    	</div>
+				<div class="col-sm-6" style="text-align:right">
+					<h4>direct your impact though input on policy</h4>
+					<h5>decision making influence in the power of your hands</h5>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div id="section3">
 		<div class="container">
-			<h3>create constituent coalitions</h3>
-			<h4>elect representatives and serve your constituents</h4>
-	    	<p>with continual elections, select others to represent you at any time</p>
+			<div class="row">
+				<div class="col-sm-6">
+					<h3>create constituent coalitions</h3>
+					<h4>elect representatives and serve your constituents</h4>
+			    	<p>with continual elections, select others to represent you at any time</p>
+		    	</div>
+		    	<div class="col-sm-6">
+					<img src="images/voetr-about3.png" style="max-width:100%">
+		    	</div>
+	    	</div>
 	    </div>
 	</div>
 	<div id="section4">
