--- a/assets/src/app/member/templates/activity.tpl.html
+++ b/assets/src/app/member/templates/activity.tpl.html
@@ -34,50 +34,149 @@
 
 	<div class="spacing-25"></div>
 	<!--gotta make this unified with universally styled cards-->
+
+
+    <md-card ng-repeat="result in results">
+
+        <div ng-show="result.model=='vote'" class="card-container">
+            <div>
+                <a href="/member/{{result.user.username}}">
+                    <img class="post-img" ng-src="{{result.user.avatarUrl}}" class="md-card-image" alt="{{result.user.username}}">
+                    <h4 class="post-name">{{result.user.username}}</h4>
+                </a>
+                <div class="pull-right">
+                    <span class="grey" am-time-ago="result.updatedAt"></span>
+                    <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+                </div>
+            </div>
+
+            <div class="post-container">
+                <h4>{{result.voteString}}<span ng-show="member.constituentCount>0"> for <a href="member/{{member.username}}/constituents">{{member.constituentCount}} constituent<span ng-show="member.constituentCount!=1">s</span></a></span></h4>
+                <div class="clearfix"></div>
+                <a href="/vote/{{result.vote.id}}"><h4>{{result.vote.title}}</h4></a>
+                <div class="spacing-10"></div>
+                <a href="/bill/{{result.bill.id}}/{{result.bill.title}}">{{result.bill.title}}</a>
+                <div class="spacing-10"></div>
+                <button ng-class="{'upVoted': result.voteString=='Yes' || result.voteString=='Yea'}" class="btn btn-default upVote col-sm-6" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i>  {{result.vote.plusCount}}</button>
+                <button ng-class="{'downVoted': result.voteString=='No' || result.voteString=='Nay'}" class="btn btn-default downVote col-sm-6" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{result.vote.minusCount}}</button>
+            </div>
+
+            <div class="spacing-15"></div>
+            <div class="post-action-container">
+                <div class="pull-left">
+                    <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
+                    <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
+                    <a href="#" class="grey" ng-click="reply(result)"><i class="fa fa-reply"></i> reply </a>
+                </div>
+                <div class="pull-right">
+                    <a href="votevote/{{result.id}}"><i class="fa fa-link grey"></i></a>
+                </div>
+            </div>
+
+            <div style="margin-left:61px;" ng-show="vote.showReply">
+                <form role="form">
+                    <md-input-container class="md-block">
+                        <textarea ng-model="result.newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
+                    </md-input-container>
+                    <button ng-click="createPost(result)" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
+                </form>
+            </div>
+        </div>
+
+        <div ng-show="result.model=='post'" class="card-container">
+
+            <div>
+                <a href="/member/{{result.user.username}}">
+                    <img class="post-img" ng-src="{{result.user.avatarUrl}}" class="md-card-image" alt="{{result.user.username}}">
+                    <h4 class="post-name">{{result.user.username}}</h4>
+                </a>
+                <div class="pull-right">
+                    <span class="grey" am-time-ago="result.updatedAt"></span>
+                    <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+                </div>
+            </div>
+
+            <div class="post-container">
+                <div ng-show="result.profile.id != result.user.id && result.profile.id != member.id">
+                    <a ng-show="result.bill" href="bill/{{result.bill.id}}/1"><h4>{{result.bill.title}}</h4></a>
+                    <a ng-show="result.committee" href="committee/{{result.committee.urlTitle}}"><h4>{{result.committee.title}}</h4></a>
+                    <a ng-show="result.profile.id != member.id" href="member/{{result.profile.username}}"><h4>{{result.profile.username}}</h4></a>
+                    <a ng-show="result.vote" href="vote/{{result.vote.id}}"><h4>{{result.vote.title}}</h4></a>
+                </div>
+                <p>{{result.post}}</p>
+            </div>
+
+            <div class="post-action-container">
+                <div class="pull-left">
+                    <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
+                    <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
+                    <a href="#" class="grey" ng-click="reply(result)"><i class="fa fa-reply"></i> reply </a>
+                </div>
+                <div class="pull-right">
+                    <a href="post/{{result.id}}"><i class="fa fa-link grey"></i></a>
+                </div>
+            </div>
+
+            <div style="margin-left:61px;" ng-show="result.showReply">
+                <form role="form">
+                    <md-input-container class="md-block">
+                        <textarea ng-model="result.newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
+                    </md-input-container>
+                    <button ng-click="createPost(result)" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
+                </form>
+            </div>
+
+        </div>
+
+    </md-card>
+
+
+
+
+    <!--
     <md-card ng-repeat="post in posts">
         <div class="card-container">
 
-
-                <div>
-                    <a href="/member/{{post.user.username}}">
-                        <img class="post-img" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
-                        <h4 class="post-name">{{post.user.username}}</h4>
-                    </a>
-                    <div class="pull-right">
-                        <span class="grey" am-time-ago="post.updatedAt"></span>
-                        <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
-                    </div>
+            <div>
+                <a href="/member/{{post.user.username}}">
+                    <img class="post-img" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
+                    <h4 class="post-name">{{post.user.username}}</h4>
+                </a>
+                <div class="pull-right">
+                    <span class="grey" am-time-ago="post.updatedAt"></span>
+                    <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
                 </div>
+            </div>
 
-                <div class="post-container">
-                    <div ng-show="post.profile.id != post.user.id && post.profile.id != member.id">
-                        <a ng-show="post.bill" href="bill/{{post.bill.id}}/1"><h4>{{post.bill.title}}</h4></a>
-                        <a ng-show="post.committee" href="committee/{{post.committee.urlTitle}}"><h4>{{post.committee.title}}</h4></a>
-                        <a ng-show="post.profile.id != member.id" href="member/{{post.profile.username}}"><h4>{{post.profile.username}}</h4></a>
-                        <a ng-show="post.vote" href="vote/{{post.vote.id}}"><h4>{{post.vote.title}}</h4></a>
-                    </div>
-                    <p>{{post.post}}</p>
+            <div class="post-container">
+                <div ng-show="post.profile.id != post.user.id && post.profile.id != member.id">
+                    <a ng-show="post.bill" href="bill/{{post.bill.id}}/1"><h4>{{post.bill.title}}</h4></a>
+                    <a ng-show="post.committee" href="committee/{{post.committee.urlTitle}}"><h4>{{post.committee.title}}</h4></a>
+                    <a ng-show="post.profile.id != member.id" href="member/{{post.profile.username}}"><h4>{{post.profile.username}}</h4></a>
+                    <a ng-show="post.vote" href="vote/{{post.vote.id}}"><h4>{{post.vote.title}}</h4></a>
                 </div>
+                <p>{{post.post}}</p>
+            </div>
 
-                <div class="post-action-container">
-                    <div class="pull-left">
-                        <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
-                        <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
-                        <a href="#" class="grey" ng-click="reply(post)"><i class="fa fa-reply"></i> reply </a>
-                    </div>
-                    <div class="pull-right">
-                        <a href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
-                    </div>
+            <div class="post-action-container">
+                <div class="pull-left">
+                    <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
+                    <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
+                    <a href="#" class="grey" ng-click="reply(post)"><i class="fa fa-reply"></i> reply </a>
                 </div>
+                <div class="pull-right">
+                    <a href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
+                </div>
+            </div>
 
-                <div style="margin-left:61px;" ng-show="post.showReply">
-                    <form role="form">
-                        <md-input-container class="md-block">
-                            <textarea ng-model="post.newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
-                        </md-input-container>
-                        <button ng-click="createPost(post)" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
-                    </form>
-                </div>
+            <div style="margin-left:61px;" ng-show="post.showReply">
+                <form role="form">
+                    <md-input-container class="md-block">
+                        <textarea ng-model="post.newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
+                    </md-input-container>
+                    <button ng-click="createPost(post)" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
+                </form>
+            </div>
 
         </div>
     </md-card>
@@ -130,5 +229,8 @@
 
 		</div>
 	</md-card>
+    -->
+
+
 	<div class="spacing-10"></div>
 </div>
