--- a/assets/src/app/nav/index.tpl.html
+++ b/assets/src/app/nav/index.tpl.html
@@ -1,13 +1,15 @@
 <style>
+    .nav{font-family: sans-serif;font-size:18px;}
+    .navbar-brand{font-family: sans-serif;font-size:18px;}
     .navbar-inverse{background-color:rgba(255,255,255,1);border-color:#e1e1e1;}
-    .navbar-inverse .navbar-nav>li>a, .navbar-inverse .navbar-text{color:#424242}
+    .navbar-inverse .navbar-nav > li >a, .navbar-inverse .navbar-text{color:#424242}
     .navbar-inverse .navbar-nav > li > a:focus{color:#424242}
-    .navbar-inverse .navbar-brand{color:#717171}
+    .navbar-inverse .navbar-brand{color:#424242}
     .navbar-inverse .navbar-brand:focus{color:#424242}
-    .navbar-inverse .navbar-toggle {border-color: #424242;}
+    .navbar-inverse .navbar-toggle {border-color: white;}
     .navbar-inverse .navbar-toggle .icon-bar{background-color:#424242;}
     .navbar-inverse .navbar-toggle:hover .icon-bar{background-color:#fff;}
-    .navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover {color:#717171; background-color:#e1e1e1;}
+    .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover {color:#717171; background-color:#e1e1e1;}
     md-progress-linear .md-container {background-color: #e1e1e1!important;}
 </style>
 <div ng-controller="NavCtrl" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -26,7 +28,7 @@
                 <li ng-show="!currentUser"><a href="/about">about</a></li>
                 <li><a href="/search">discover</a></li>
                 <form class="navbar-form pull-left" role="search" action="/search/" onSubmit=" location.href = 'search/' + document.getElementById('search-link').value; return false;">
-                    <div class="form-group">
+                    <div class="form-group" style="font-size:20px">
                         <input ng-keyup="keyPress(searchValue)" ng-model="searchValue" id="search-link" size="40" type="text" placeholder="">
                     </div>
                 </form>
@@ -39,7 +41,7 @@
                     <ul class="dropdown-menu">
                         <li>
                             <a href="/member/{{currentUser.username}}">
-                                <img style="max-height:32px;max-width:32px;" src="{{currentUser.avatarUrl}}"/> {{currentUser.username}}
+                                <img style="height:32px;width:32px;border-radius:3px" src="{{currentUser.avatarUrl}}"/> {{currentUser.username}}
                             </a>
                         </li>
                         <li><a href="/account">account</a></li>
