--- a/assets/src/app/nav/index.tpl.html
+++ b/assets/src/app/nav/index.tpl.html
@@ -36,7 +36,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown" ng-show="currentUser">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        {{currentUser.username}} <span class="caret"></span>
+                        {{currentUser.username}} <span class="fa fa-angle-down"></span>
                     </a>
                     <ul class="dropdown-menu">
                         <li>
