--- a/.tmp/public/src/app/bill/index.tpl.html
+++ b/.tmp/public/src/app/bill/index.tpl.html
@@ -94,7 +94,13 @@
 	                        </a>
 	                        <div class="pull-right">
 	                            <span class="grey" am-time-ago="post.updatedAt"></span>
-	                            <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a>
+	                            <div style="display:inline" uib-dropdown is-open="status.isopen">
+	                                <a uib-dropdown-toggle ng-disabled="disabled" href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+	                                <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+	                                    <li role="menuitem"><a href="#">Share</a></li>
+	                                    <li role="menuitem"><a href="#">Delete</a></li>
+	                                </ul>
+	                            </div>
 	                        </div>
 	                    </div>
 
@@ -128,8 +134,6 @@
 					</form>
 		        </div>
 
-
-
 				<!--<div ng-show="!currentUser" class="profilePost">
 			        <form role="form">
 			            <md-input-container class="md-block">
@@ -159,8 +163,6 @@
 			    </md-card>
 
 
-
-
 		        <md-card ng-repeat="post in posts">
 
 			        <div class="card-container">
@@ -171,7 +173,13 @@
 	                        </a>
 	                        <div class="pull-right">
 	                            <span class="grey" am-time-ago="post.updatedAt"></span>
-	                            <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a>
+	                            <div style="display:inline" uib-dropdown is-open="status.isopen">
+	                                <a uib-dropdown-toggle ng-disabled="disabled" href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+	                                <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+	                                    <li role="menuitem"><a href="#">Share</a></li>
+	                                    <li role="menuitem"><a href="#">Delete</a></li>
+	                                </ul>
+	                            </div>
 	                        </div>
 	                    </div>
 
