--- a/.tmp/public/src/app/search/index.tpl.html
+++ b/.tmp/public/src/app/search/index.tpl.html
@@ -44,18 +44,13 @@
 		                        </a>
 		                        <div class="pull-right">
 		                            <span style="color:grey" am-time-ago="result.updatedAt"></span>
-		                            <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a>
-		                            <!--
-		                            <div class="btn-group" uib-dropdown is-open="status.isopen">
-		                              <button uib-dropdown-toggle ng-disabled="disabled">
-		                                <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
-		                              </button>
-		                              <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
-		                                <li role="menuitem"><a href="#">Share</a></li>
-		                                <li role="menuitem"><a href="#">Delete</a></li>
-		                              </ul>
+		                            <div style="display:inline" uib-dropdown is-open="status.isopen">
+		                                <a uib-dropdown-toggle ng-disabled="disabled" href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+		                                <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+		                                    <li role="menuitem"><a href="#">Share</a></li>
+		                                    <li role="menuitem"><a href="#">Delete</a></li>
+		                                </ul>
 		                            </div>
-		                            -->
 		                        </div>
 		                    </div>
 
@@ -118,18 +113,13 @@
 			                        </a>
 			                        <div class="pull-right">
 			                            <span style="color:grey" am-time-ago="result.updatedAt"></span>
-			                            <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a>
-			                            <!--
-			                            <div class="btn-group" uib-dropdown is-open="status.isopen">
-			                              <button uib-dropdown-toggle ng-disabled="disabled">
-			                                <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
-			                              </button>
-			                              <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
-			                                <li role="menuitem"><a href="#">Share</a></li>
-			                                <li role="menuitem"><a href="#">Delete</a></li>
-			                              </ul>
+			                            <div style="display:inline" uib-dropdown is-open="status.isopen">
+			                                <a uib-dropdown-toggle ng-disabled="disabled" href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+			                                <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+			                                    <li role="menuitem"><a href="#">Share</a></li>
+			                                    <li role="menuitem"><a href="#">Delete</a></li>
+			                                </ul>
 			                            </div>
-			                            -->
 			                        </div>
 			                    </div>
 
@@ -351,18 +341,13 @@
 	                        </a>
 	                        <div class="pull-right">
 	                            <span style="color:grey" am-time-ago="result.updatedAt"></span>
-	                            <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a>
-	                            <!--
-	                            <div class="btn-group" uib-dropdown is-open="status.isopen">
-	                              <button uib-dropdown-toggle ng-disabled="disabled">
-	                                <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
-	                              </button>
-	                              <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
-	                                <li role="menuitem"><a href="#">Share</a></li>
-	                                <li role="menuitem"><a href="#">Delete</a></li>
-	                              </ul>
+	                            <div style="display:inline" uib-dropdown is-open="status.isopen">
+	                                <a uib-dropdown-toggle ng-disabled="disabled" href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+	                                <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+	                                    <li role="menuitem"><a href="#">Share</a></li>
+	                                    <li role="menuitem"><a href="#">Delete</a></li>
+	                                </ul>
 	                            </div>
-	                            -->
 	                        </div>
 	                    </div>
 
@@ -393,7 +378,7 @@
 
 				<md-card ng-show="result.model=='bill'">
 					<div class="card-container">
-		            	<h4><a href="/bill/{{bill._id}}/{{bill.title.replace(' ','-')}}">{{result.title}}</a></h4>
+		            	<h4><a href="/bill/{{result.id}}/{{result.title.replace(' ','-')}}">{{result.title}}</a></h4>
 						<div class="spacing-10"></div>
 		            	<button ng-class="{'upVoted': vote.class=='upVote'}" class="btn btn-default upVote col-sm-6" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i>  {{result.plusCount}}</button>
 			            <button ng-class="{'downVoted': vote.class=='downVote'}" class="btn btn-default downVote col-sm-6" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{result.minusCount}}</button>
