--- a/.tmp/public/src/app/vote/index.tpl.html
+++ b/.tmp/public/src/app/vote/index.tpl.html
@@ -64,7 +64,13 @@
 	                        </a>
 	                        <div class="pull-right">
 	                            <span class="grey" am-time-ago="post.updatedAt"></span>
-	                            <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a>
+	                            <div style="display:inline" uib-dropdown is-open="status.isopen">
+	                                <a uib-dropdown-toggle ng-disabled="disabled" href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+	                                <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+	                                    <li role="menuitem"><a href="#">Share</a></li>
+	                                    <li role="menuitem"><a href="#">Delete</a></li>
+	                                </ul>
+	                            </div>
 	                        </div>
 	                    </div>
 
@@ -131,7 +137,13 @@
 	                        </a>
 	                        <div class="pull-right">
 	                            <span class="grey" am-time-ago="post.updatedAt"></span>
-	                            <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a>
+	                            <div style="display:inline" uib-dropdown is-open="status.isopen">
+	                                <a uib-dropdown-toggle ng-disabled="disabled" href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+	                                <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+	                                    <li role="menuitem"><a href="#">Share</a></li>
+	                                    <li role="menuitem"><a href="#">Delete</a></li>
+	                                </ul>
+	                            </div>
 	                        </div>
 	                    </div>
 
