--- a/assets/src/app/committee/templates/activity.tpl.html
+++ b/assets/src/app/committee/templates/activity.tpl.html
@@ -31,8 +31,6 @@
     </md-card>
 
 
-
-
     <md-card ng-repeat="post in posts">
         <div class="card-container">
 
@@ -43,7 +41,13 @@
                 </a>
                 <div class="pull-right">
                     <span class="grey" am-time-ago="post.updatedAt"></span>
-                    <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+                    <div style="display:inline" uib-dropdown is-open="status.isopen">
+                        <a uib-dropdown-toggle ng-disabled="disabled" href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+                        <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                            <li role="menuitem"><a href="#">Share</a></li>
+                            <li role="menuitem"><a href="#">Delete</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
 
