--- a/assets/src/app/member/templates/activity.tpl.html
+++ b/assets/src/app/member/templates/activity.tpl.html
@@ -63,8 +63,8 @@
                 <div class="spacing-10"></div>
                 <a href="/bill/{{result.bill.id}}/{{result.bill.title}}">{{result.bill.title}}</a>
                 <div class="spacing-10"></div>
-                <button ng-class="{'upVoted': result.voteString=='Yes' || result.voteString=='Yea'}" class="btn btn-default upVote col-sm-6" ng-click="createVote(1, vote)"><i class="fa fa-angle-up"></i>  {{result.vote.plusCount}}</button>
-                <button ng-class="{'downVoted': result.voteString=='No' || result.voteString=='Nay'}" class="btn btn-default downVote col-sm-6" ng-click="createVote(-1, vote)"><i class="fa fa-angle-down"></i>  {{result.vote.minusCount}}</button>
+                <button ng-class="{'upVoted': result.voteString=='Yes' || result.voteString=='Yea'}" class="btn btn-default upVote col-xs-6" ng-click="createVote(1, vote)"><i class="fa fa-angle-up"></i>  {{result.vote.plusCount}}</button>
+                <button ng-class="{'downVoted': result.voteString=='No' || result.voteString=='Nay'}" class="btn btn-default downVote col-xs-6" ng-click="createVote(-1, vote)"><i class="fa fa-angle-down"></i>  {{result.vote.minusCount}}</button>
             </div>
 
             <div class="spacing-15"></div>
