--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -9,9 +9,8 @@
 		<div class="container">
 			<h2>directly impact the political landscape</h2>
 			<br>
-			<h4>build empowerment though the creation of constituent coalitions.</h4>
+			<h4>build empowerment though creating constituent coalitions.</h4>
 			<!--ability to create citizen colitions-->
-
 			<h4>change consensus though direct input on policy decisions.</h4>
 		</div>
 	</div>
