--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -18,7 +18,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-6">
-					<img src="images/voetr-about2.png" style="max-width:100%">
+					<img src="images/voetr-new.png" style="max-width:100%">
 		    	</div>
 				<div class="col-sm-6" style="text-align:right">
 					<h4>direct your impact though input on policy</h4>
