--- a/assets/src/app/home/templates/intro.tpl.html
+++ b/assets/src/app/home/templates/intro.tpl.html
@@ -19,7 +19,7 @@
                 <!--<h4>create coalitions of representation</h4>-->
                 <h4>create constituent coalitions</h4>
                 <br><br>
-                <a href="/about" class="btn btn-default">learn more</a>
+                <a style="width:100%" href="/about" class="btn btn-default">learn more</a>
                 <!--reduce polarization-->
                 <!--seeing past partisan politics-->
                 <!--<p>directly impact the creation of policy</p>-->
