--- a/.tmp/public/src/app/about/index.tpl.html
+++ b/.tmp/public/src/app/about/index.tpl.html
@@ -17,10 +17,10 @@
 	<div id="section2">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-6">
+				<div class="col-sm-4">
 					<img src="images/voetr-new.png" style="max-width:100%">
 		    	</div>
-				<div class="col-sm-6" style="text-align:right">
+				<div class="col-sm-8" style="text-align:right">
 					<h4>direct your impact though input on policy</h4>
 					<h5>decision making influence in the power of your hands</h5>
 				</div>
@@ -30,19 +30,19 @@
 	<div id="section3">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-6">
+				<div class="col-sm-8">
 					<h3>create constituent coalitions</h3>
 					<h4>elect representatives and serve your constituents</h4>
 			    	<p>with continual elections, select others to represent you at any time</p>
 		    	</div>
-		    	<div class="col-sm-6">
+		    	<div class="col-sm-4">
 					<img src="images/voetr-about3.png" style="max-width:100%">
 		    	</div>
 	    	</div>
 	    </div>
 	</div>
 	<div id="section4">
-		<div class="container" style="text-align:right">
+		<div class="container" style="text-align:left">
 			<img style="height:64px;" src="images/voetr_icon.png"/>
 			<h4>power to the people</h4>
 		</div>
