--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -5,7 +5,7 @@
 }
 @media (max-width: 767px) {
     .verticalRow {
-        display: block; /* Turn off the flexible box layout */
+        display: block;
     }
 }
 </style>
@@ -58,8 +58,8 @@
 		<div class="container" style="text-align:left">
 			<div class="row verticalRow">
 				<div class="col-sm-8">
-					<img style="height:64px;" src="images/voetr_icon.png"/>
 					<h3>power to the people</h3>
+					<img style="height:64px;" src="images/voetr_icon.png"/>
 				</div>
 				<div class="col-sm-4">
 					<img src="images/voetr-about3.png" style="max-width:100%">
